# llm-red-team-toolkit

./: .gitignore  README.md  pyproject.toml
artifacts/: 2026-02-14T04-51-24.926799Z00-00_c481f557-bfe9-43b5-8520-3a0dd1bedb03__structured_output.jsonl  campaign_01_results.jsonl
docs/: campaign_01.md
prompt_suites/: baseline.yaml  exfiltration.yaml  foothold.yaml  privilege_escalation.yaml  prompt_injection.yaml  recon.yaml  structured_output.yaml
scripts/: run_suite.py  summarize_results.py
src/llm_red_team_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/llm_rt/: config.py  models.py  runner.py  scoring.py  utils.py
